# fidel-musicplayer

./: CMakeCache.txt  CMakeLists.txt  GPATH  GRTAGS  GTAGS  Makefile  README.md  clock-skew-fix  cmake_install.cmake  codelines  fidel  fidel_debug
Resources/Databases/: audio-library.db
Resources/suggested-themes/Ultra-Flat/gtk-2.0/: gtkrc
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile  fidel  main.cpp  setup
src/Audio/: CMakeLists.txt  Makefile  cmake_install.cmake  playback.cpp  playback.h
src/Audio-Info/: #audioinfo.h#  CMakeLists.txt  Makefile  audio-info.cpp  audio-info.h  audioinfo.cpp  audioinfo.h  cmake_install.cmake
src/Audio-Library/: CMakeLists.txt  Makefile  audio-library.cpp  audio-library.h  cmake_install.cmake
src/AudioPlayer/: CMakeLists.txt  audioplayer.cpp  audioplayer.h
src/GUI/: #fidel-popover.cpp#  #gui.cpp#  .#seeker.h  CMakeLists.txt  Makefile  album-art-viewer.cpp  album-art-viewer.cpp.backup  album-art-viewer.h  album-art-viewer.h.backup  album-art.cpp  album-art.cpp.backup  album-art.h  album-art.h.backup  cmake_install.cmake  fidel-expermintal.ui~  fidel-options.cpp  fidel-options.cpp~  fidel-options.h  fidel-options.h~  fidel-popover.cpp  fidel-popover.cpp~  fidel-popover.h  fidel-popover.h~  fidel-resources.c  fidel-resources.cpp  fidel-resources.h  fidel.gresource  fidel.gresource.xml  fidel.ui  fidel.ui~  gui.cpp  gui.h  playlist-manager.cpp  playlist-manager.h  playlist-manager.h~  playlist-queue.cpp  playlist-queue.cpp~  playlist-queue.h  playlist-queue.h~  playlist.cpp  (+8 more)
src/GUI/Resources/: #fidel.ui#  fidel.ui  fidel.ui.backup  fidel.ui~  theme.css
src/GUI/Resources/icons/: fidel-backup.ui
src/GUI/backup-ui/: fidel.ui
src/Spectrum/: #spectrum.cpp#  .#spectrum.cpp  CMakeLists.txt  Makefile  cmake_install.cmake  spectrum.cpp  spectrum.h
src/Utilities/: CMakeLists.txt  Makefile  btree.cpp  btree.h  cmake_install.cmake  dir-data-struct.h  dir-indexer.cpp  dir-indexer.h  threadpool.h  util.cpp  util.cpp~  util.h  util.h~
