add_library(GUI
  fidel-resources.h
  fidel-resources.c  
  gui.h
  gui.cpp
  themer.h
  themer.cpp
  singleton.h
  fidel-popover.h
  fidel-popover.cpp
  fidel-options.h
  fidel-options.cpp
  seeker.h
  album-art.cpp
  album-art.h
  album-art-viewer.h
  album-art-viewer.cpp
  playlist-queue.h
  playlist-queue.cpp  
  playlist.h
  playlist.cpp
  playlist-manager.h
  playlist-manager.cpp
  seeker.cpp
  )
